--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Water</string>
     <string name="action_settings">Settings</string>
+    <string name="monthly">Monthly</string>
+    <string name="every_other_month">Every other month</string>
+    <string name="button">Button</string>
+    <string name="ok">ok</string>
+    <string name="費用">費用:</string>
+    <string name="outcome">outcome</string>
+    <string name="fee">fee</string>
+    <string name="extra_fee">fee</string>
 </resources>
